--- a/index.html
+++ b/index.html
@@ -2,10 +2,26 @@
 <html>
     <head>
         <title>Excursion</title>
-        <link href="resources/styles.css" rel="stylesheet">
+        <link href="styles.css" rel="stylesheet">
     </head>
     <body>
-        <h1 id="header" class="header"> Discover hidden places in the world around you</h1>
-        <a href="#header">Download Excursion (Coming Soon)</a>
+        <div id = "top">
+            <h1 id="header" class="header"> Discover hidden places in the world around you</h1>
+            <a href="#header">Download Excursion (Coming Soon)</a>
+            <video src = "resources/excursion.mp4" autoplay muted>Oh No! Video Not Supported</video>
+        </div>
+        <div id = "middle">
+            <h2>Your personal travel guide</h2>
+            <p>Excursion remembers places you like, and reccomends points of interest around you.</p>
+            <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/camp.jpg" alt = "landscape with tent">
+        </div>
+        <div id = "bottom">
+            <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/phone.png" alt = "cellphone icon">
+            <h3>Coming Soon for iPhone and Android</h3>
+            <a href="#header">Download Excursion (Coming Soon)</a>
+        </div>
+        <div id = "copyright">
+            <h5>&copy; Excursion</h5>
+        </div>
     </body>
 </html>
