--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html>
     <head>
         <title>Excursion</title>
-        <link href="styles.css" rel="stylesheet">
+        <link href="resources/styles.css" rel="stylesheet">
     </head>
     <body>
         <div id = "top">
-            <h1 id="header" class="header"> Discover hidden places in the world around you</h1>
+            <h1 id="header"> Discover hidden places in the world around you</h1>
             <a href="#header">Download Excursion (Coming Soon)</a>
+        </div>
+        <div id = "video">
             <video src = "resources/excursion.mp4" autoplay muted>Oh No! Video Not Supported</video>
         </div>
         <div id = "middle">
@@ -15,9 +17,11 @@
             <p>Excursion remembers places you like, and reccomends points of interest around you.</p>
             <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/camp.jpg" alt = "landscape with tent">
         </div>
-        <div id = "bottom">
-            <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/phone.png" alt = "cellphone icon">
-            <h3>Coming Soon for iPhone and Android</h3>
+        <div id = "phone">
+            <img src="resources/phone.png" alt = "cellphone icon">
+        </div>
+        <div id = #bottom>
+            <h2>Coming Soon for iPhone and Android</h2>
             <a href="#header">Download Excursion (Coming Soon)</a>
         </div>
         <div id = "copyright">
